test/tests/operators/from_ftp/validation/error_missing_parser_pipeline.txt
error: required subpipeline was not provided
 --> tests/operators/from_ftp/validation/error_missing_parser_pipeline.tql:5:1
  |
5 | from_ftp "ftp://127.0.0.1:21/download.ndjson"
  | ^^^^^^^^ 
  |
  = usage: from_ftp url:string, [tls=record]
  = docs: https://tenzir.com/docs/reference/operators/from_ftp
